# foreign-export-Haskell-vector

./: .gitignore  DoubleVector.h  IntVector.h  README.md  StorableInstances.hsc  StorableInstances_Massiv.hsc  mylib.cabal  stack.yaml
SomethingToVector/: Lib.hs  main.c
SomethingToVector_FAULTY/: Lib.hs  main.c
StablePtr_Massiv/: DoubleVector_C.h  DoubleVector_H.h  Lib.hs  main.c
StablePtr_Massiv_extractor/: Lib.hs  SomethingToMassiv.hs  main.c
StablePtr_Vector/: Lib.hs  main.c
StablePtr_Vector_extractor/: Lib.hs  SomethingToVector.hs  main.c
VectorToSomething/: Lib.hs  main.c
VectorToVector/: Lib.hs  main.c
VectorToVector_FAULTY/: Lib.hs  main.c
