name:           mylib
version:        0.1.0.0
description:    Version using Vector (BROKEN CODE - DO NOT USE)
homepage:       https://github.com/githubuser/mylib#readme
bug-reports:    https://github.com/githubuser/mylib/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2018 Author name here
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.10


executable main_SomethingToVector_FAULTY
  main-is: SomethingToVector_FAULTY/main.c
  install-includes: SomethingToVector_FAULTY/Lib_stub.h
  other-modules:
      StorableInstances
      SomethingToVector_FAULTY.Lib
  hs-source-dirs:
      .
  include-dirs:
      .
  ghc-options: -threaded
  build-depends:
      base >=4.7 && <5
    , vector
  default-language: Haskell2010


executable main_VectorToSomething
  main-is: VectorToSomething/main.c
  install-includes: VectorToSomething/Lib_stub.h
  other-modules:
      StorableInstances
      VectorToSomething.Lib
  hs-source-dirs:
      .
  include-dirs:
      .
  ghc-options: -threaded
  build-depends:
      base >=4.7 && <5
    , vector
  default-language: Haskell2010


executable main_VectorToVector_FAULTY
  main-is: VectorToVector_FAULTY/main.c
  install-includes: VectorToVector_FAULTY/Lib_stub.h
  other-modules:
      StorableInstances
      VectorToVector_FAULTY.Lib
  hs-source-dirs:
      .
  include-dirs:
      .
  ghc-options: -threaded
  build-depends:
      base >=4.7 && <5
    , vector
  default-language: Haskell2010


executable main_StablePtr_Massiv
  main-is: StablePtr_Massiv/main.c
  install-includes: StablePtr_Massiv/Lib_stub.h
  other-modules:
      StorableInstances
      StablePtr_Massiv.Lib
  hs-source-dirs:
      .
  include-dirs:
      .
  ghc-options: -threaded
  build-depends:
      base >=4.7 && <5
    , vector
    , storable-tuple
    , massiv
  default-language: Haskell2010


executable main_StablePtr_Vector
  main-is: StablePtr_Vector/main.c
  install-includes: StablePtr_Vector/Lib_stub.h
  other-modules:
      StorableInstances
      StablePtr_Vector.Lib
  hs-source-dirs:
      .
  include-dirs:
      .
  ghc-options: -threaded
  build-depends:
      base >=4.7 && <5
    , vector
    , storable-tuple
    , massiv
  default-language: Haskell2010







executable main_StablePtr_Vector_extractor
  main-is: StablePtr_Vector_extractor/main.c
  install-includes: StablePtr_Vector_extractor/Lib_stub.h
                    StablePtr_Vector_extractor/SomethingToVector_stub.h
  other-modules:
      StorableInstances
      StablePtr_Vector_extractor.Lib
      StablePtr_Vector_extractor.SomethingToVector
  hs-source-dirs:
      .
  include-dirs:
      .
  ghc-options: -threaded
  build-depends:
      base >=4.7 && <5
    , vector
    , storable-tuple
  default-language: Haskell2010


executable main_StablePtr_Massiv_extractor
  main-is: StablePtr_Massiv_extractor/main.c
  install-includes: StablePtr_Massiv_extractor/Lib_stub.h
                    StablePtr_Massiv_extractor/SomethingToMassiv_stub.h
  other-modules:
      StorableInstances_Massiv
      StablePtr_Massiv_extractor.Lib
      StablePtr_Massiv_extractor.SomethingToMassiv
  hs-source-dirs:
      .
  include-dirs:
      .
  ghc-options: -threaded
  build-depends:
      base >=4.7 && <5
    , storable-tuple
    , massiv
  default-language: Haskell2010
